--- a/raduiken.css
+++ b/raduiken.css
@@ -17,6 +17,7 @@ a {
 .left { float: left; }
 .right { float: right; }
 .center { text-align: center; }
+.killfloat { clear: both; }
 
 /* Shadows and borders */
 .grid,
@@ -30,6 +31,8 @@ a {
 
 /* Window */
 .window {
+  float: left;
+  margin: 10px;
   padding: 10px;
   background: #F0F0F0;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#F0F0F0'); /* for IE */
@@ -48,7 +51,6 @@ a {
   font-size: 12px;
   color: #FFF;
   text-shadow: 0 -1px 1px #254F7A;
-  cursor: pointer;
   background: #5E87B0;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#81A8CE', endColorstr='#5E87B0'); /* for IE */
   background: -webkit-gradient(linear, left top, left bottom, from(#81A8CE), to(#5E87B0)); /* for webkit browsers */
