--- a/raduiken.css
+++ b/raduiken.css
@@ -221,7 +221,10 @@ ul.menu > li:last-child a {
 
 /* Form */
 form .field {
-  margin: 3px 0;
+  float: left;
+  margin: 0;
+  margin-right: 10px;
+  padding-bottom: 10px;
 }
 select {
   font-family: Arial, sans-serif;
@@ -242,6 +245,9 @@ input[type='password'] {
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
+}
+input[type='checkbox'] {
+  vertical-align: middle;
 }
 input[type='submit'],
 button {
