--- a/raduiken.css
+++ b/raduiken.css
@@ -174,6 +174,7 @@ ul.menu > li:last-child a {
 .grid ul.toolbar {
   margin: 0;
   padding: 5px;
+  height: 21px;
   line-height: 21px;
   background: #E9EAEB;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F0F0F0', endColorstr='#E9EAEB'); /* for IE */
