--- a/raduiken.css
+++ b/raduiken.css
@@ -9,6 +9,9 @@ html {
   background: -moz-linear-gradient(top,  #E6E6E6,  #CCCCCC); /* for firefox 3.6+ */
   background-attachment: fixed;
 }
+body {
+  overflow: hidden;
+}
 a {
   color: #000;
 }
@@ -119,9 +122,6 @@ ul.menu > li a {
   text-decoration: none;
   border-left: 1px solid #FFF;
   border-right: 1px solid #AAA;
-  border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  -webkit-border-radius: 6px 6px 0 0;
 }
 ul.menu > li:hover {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#DDDDDD', endColorstr='#FFFFFF'); /* for IE */
