--- a/raduiken-0.1.css
+++ b/raduiken-0.1.css
@@ -18,6 +18,11 @@ a {
 h1 {
   text-shadow: 1px 1px 2px #999;
 }
+hr {
+  height: 1px;
+  border: none;
+  border-bottom: 1px solid #AAA;
+}
 
 /* Generic */
 .left { float: left; }
@@ -253,7 +258,9 @@ textarea {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
 }
-input[type='checkbox'] {
+input[type='checkbox'],
+input[type='radio'] {
+  margin-top: -2px;
   vertical-align: middle;
 }
 input[type='submit'],
